@ fix(security): tighten CORS to configurable origin list
- Replaced wildcard "*" allowedOrigins with @Value injection from app.cors.allowed-origins
- Defaults to http://localhost:5173 for development (set via CORS_ALLOWED_ORIGINS env var)
- Supports comma-separated multiple origins for production (e.g. https://a.example.com,https://b.example.com)
- Added CORS_ALLOWED_ORIGINS to .env.example documentation

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
@